--- a/article1.html
+++ b/article1.html
@@ -1,14 +1,15 @@
 <doctype HTML>
 <head>
     <title>MechAlchemy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
-    
+
+<body>    
 <section class="top">
     <nav> 
         <a href="index.html"><img src="images/logo.png"></a>
@@ -32,7 +33,7 @@
                 <h1>BOBA: CYANIDE, HONG-KONG, AND THE BUBBLE TEA CRAZE</h1>
                 <h5><i>Aleksandr Naganov, 10/19/2023</i></h5>
             </div>
-            <div class="articleimage"> <img src="images/coffee-1649268776.webp" alt="Boba and cyanide"></div>
+            <div class="articleimage"> <img src="images/boba-new.jpg" alt="Boba and cyanide"></div>
             <div class="caption"><p><i> In 2021, the bubble tea market was valued at $2.17 billion. </i></p></div>
             <h3><br>Introduction</h3>
             <p><br>Boba is everywhere. In 2021, the bubble tea market was valued at $2.17 billion. It is expected to grow to $3.78 billion - over 170% - by the year 2030. Over the past 30 years, the drink has spread from Taiwan to all corners of the world, becoming a universal cultural icon. However, despite its popularity, bubble tea's origins, history and manufacturing process remain relatively unknown to the general public. Don't just drink boba - understand it.</p>
