--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,14 @@
 <doctype HTML>
 <head>
     <title>MechAlchemy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
 <section class="top">
     <nav> 
@@ -22,11 +24,12 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
+
 </section>
 
 <section class="main-section">
     <div class="row">
-        <div class="leftcolumn">
+        <div class="column">
             <a href="article1.html" class="card-link"><div class="card">
                 <h2>BOBA: CYANIDE, HONG-KONG, AND THE BUBBLE TEA CRAZE</h2>
                 <h5><i>Aleksandr Naganov, 9/10/2023<br> </i></h5>
@@ -46,14 +49,6 @@
                 <p>A look at the technology that created the ebike revolution</p>
             </div></a>
             </div>
-        </div>
-        <div class="rightcolumn">
-                <h2>TOP ARTICLES</h2>
-                <ul class="top-articles">
-                    <a href="article1.html" class="card-link"><li><br>Boba: Cyanide, Hong-Kong, and the Bubble Tea Craze</li></a>
-                    <a href="article1.html" class="card-link"><li>Fast Fashion: Cutting Corners taken to Perfection</li></a>
-                    <a href="article1.html" class="card-link"><li>Ebikes and the Battery Revolution</li></a>
-                </ul>
         </div>
         </div>
 </section>
