--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;300;400;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;300;400;600;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     
@@ -18,6 +19,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="https://www.youtube.com/@MechAlchemy">YOUTUBE</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="mailto:MechAlchemy@gmail.com">CONTACT</a></li>
                 </ul>
@@ -37,27 +39,47 @@
         <div class="row">
             <div class="leftcolumn">
                 <a href="article1.html" class="card-link"><div class="card">
-                    <h2>BOBA: CYANIDE, HONG-KONG, AND THE BUBBLE TEA CRAZE</h2>
-                    <h5><i>Aleksandr Naganov, 9/10/2023<br> </i></h5>
-                    <div class="articleimage"> <img src="images/boba-new.jpg" alt="Boba and cyanide"></div>
+                    <div class="articleimage"> <img src="images/MycroBoba_V1.00_01_08_05.Still002.jpg" alt="Boba production"></div>
+                    <h2>Creamy, Chewy, Antifragile - The Unceasing Reign of Bubble Tea </h2>
                     <p>A detailed look into the history, production process, and socio-economic impact of bubble tea </p>
+                    <h5><i>Aleksandr Naganov, 11/05/2023<br> </i></h5>
                 </div></a>
                 <a href="article1.html" class="card-link"><div class="card">
-                    <h2>FAST FASHION: CUTTING CORNERS TAKEN TO PERFECTION</h2>
-                    <h5><i>Junjie Cai, 10/19/2023<br> </i></h5>
-                    <div class="articleimage"> <img src="images/shein.webp" alt="Fast Fashion"></div>
-                    <p>How did the fast fashion giants rise to prominence? </p>
+                    <div class="articleimage"> <img src="images/car production wireduk.webp" alt="E-Vehicle production"></div>
+                    <h2>E-Vehicle Article </h2>
+                    <p>This is gonna be an article about E-Vehicles</p>
+                    <h5><i>Aleksandr Naganov, 11/19/2023<br> </i></h5>
                 </div></a>
                 <a href="article1.html" class="card-link"><div class="card">
-                    <h2>EBIKES AND THE BATTERY REVOLUTION</h2>
-                    <h5><i>Tetsu Nagano, 10/05/2023<br> </i></h5>
-                    <div class="articleimage"> <img src="images/electric-bike-1920-x-1080-wallpaper-fgy4ihrn40lw05xc.jpg" alt="Ebikes"></div>
-                    <p>A look at the technology that created the ebike revolution</p>
+                    <div class="articleimage"> <img src="images/blank article.jpg" alt="E-Vehicle production"></div>
+                    <h2>Aleksandr Article 3</h2>
+                    <p>This is gonna be Aleksandr's third article</p>
+                    <h5><i>Aleksandr Naganov, 12/06/2023<br> </i></h5>
+                </div></a>
+            </div>
+            <div class="centercolumn">
+                <a href="perfume.html" class="card-link"><div class="card">
+                    <div class="articleimage"> <img src="images/perfume production earthislandjournal.jpg" alt="Perfume production"></div>
+                    <h2>Scents make Dollars - A Look Inside the Perfume Industry</h2>
+                    <p>A look inside the perfume industry. </p>
+                    <h5><i>Jared Kim, 11/12/2023<br> </i></h5>
+                </div></a>
+                <a href="article1.html" class="card-link"><div class="card">
+                    <div class="articleimage"> <img src="images/blank article.jpg" alt="E-Vehicle production"></div>
+                    <h2>Jared Article 2</h2>
+                    <p>This is gonna be Jared's second article</p>
+                    <h5><i>Jared Kim, 11/26/2023<br> </i></h5>
+                </div></a>
+                <a href="article1.html" class="card-link"><div class="card">
+                    <div class="articleimage"> <img src="images/blank article.jpg" alt="E-Vehicle production"></div>
+                    <h2>Jared Article 3</h2>
+                    <p>This is gonna be Jared's third article</p>
+                    <h5><i>Jared Kim, 12/13/2023<br> </i></h5>
                 </div></a>
             </div>
             <div class="rightcolumn">
                 <a href="about.html" class="card-link"><div class="card">
-                    <h2>ABOUT US</h2>
+                    <h2>About Us</h2>
                     <p>Learn more about our organization</p>
                 </div></a>
                 <div class="main-icons">
