--- a/article1.html
+++ b/article1.html
@@ -76,7 +76,7 @@
 <div class="footer">
     <div class="footer-left">
         <h3>MechAlchemy</h3>
-        <p><br>MechAlchemy is where knowledge connects with inspiration. It is a multimedia, student-led project designed to provide insightful guidance in a world where the accessibility of information only contributes to its neglect. We seek to provide every individual with the technical knowledge necessary to distinguish quality manufacturing from capitalist exploitation.</p>
+        <p><br>MechAlchemy is a multimedia, student-led project that seeks to provide insight into the production process of a variety of goods across industries. We believe that behind every item is a story that deserves to be told and that has the potential to inspire.</p>
     </div>
     <div class="footer-center">
         <a href="blog.html" class="footer-link"><h4>Blog</h4></a>
