--- a/about.html
+++ b/about.html
@@ -34,17 +34,13 @@
         <div class="column">
             <div class="articleheader">
                 <h1>About Us</h1>
-                <p><br>MechAlchemy is where knowledge connects with inspiration. It is a multimedia, student-led project designed to provide insightful guidance in a world where the accessibility of reliable information only contributes to its neglect. We seek to provide every individual with the technical knowledge necessary to distinguish quality manufacturing from capitalist exploitation.</p>
-                <h1><br>Our Team</h1>
-                <p><br>Our team consists of high school students across the US. Our talented individuals are responsible for carrying out necessary research, writing, and editing our content.</p>
+                <p><br>MechAlchemy is a multimedia, student-led project that seeks to provide insight into the production process of a variety of goods across industries. We believe that behind every item is a story that deserves to be told and that has the potential to inspire.</p>
+                <h1><br>Contributors</h1>
                 <p><br>Founder: Aleksandr Naganov</p>
-                <p><br>Board of Directors: Aleksandr Naganov, Jared Kim</p>
-                <p><br>Researchers: TBD</p>
-                <p><br>Writers: TBD</p>
-                <p><br>Editors: TBD</p>
-                <p><br>Designers: TBD</p>
+                <p><br>Writers: Aleksandr Naganov, Jared Kim</p>
+                <p><br>Programming and design: Aleksandr Naganov</p>
                 <h1><br>Join Us</h1>
-                <p><br>If you are interested in joining our team, please fill out the following form: <a href="https://forms.gle/1miH7CvUxcSXnTUr6"><p>Join Form</p></a></p>
+                <p><br>If you are interested in contributing, please fill out the following form: <a href="https://forms.gle/1miH7CvUxcSXnTUr6"><p>Join Form</p></a></p>
                 <p>We will get back to you shortly.</p>
             </div>
         </div>
@@ -56,7 +52,7 @@
 <div class="footer">
     <div class="footer-left">
         <h3>MechAlchemy</h3>
-        <p><br>MechAlchemy is where knowledge connects with inspiration. It is a multimedia, student-led project designed to provide insightful guidance in a world where the accessibility of information only contributes to its neglect. We seek to provide every individual with the technical knowledge necessary to distinguish quality manufacturing from capitalist exploitation.</p>
+        <p><br>MechAlchemy is a multimedia, student-led project that seeks to provide insight into the production process of a variety of goods across industries. We believe that behind every item is a story that deserves to be told and that has the potential to inspire.</p>
     </div>
     <div class="footer-center">
         <a href="blog.html" class="footer-link"><h4>Blog</h4></a>
