--- a/blog.html
+++ b/blog.html
@@ -56,8 +56,8 @@
         <div class="centercolumn">
             <a href="perfume.html" class="card-link"><div class="card">
                 <div class="articleimage"> <img src="images/perfume production earthislandjournal.jpg" alt="Perfume production"></div>
-                <h2>Scents make Dollars - A Look Inside the Perfume Industry</h2>
-                <p>A look inside the perfume industry. </p>
+                <h2>Scents and Remembrance: A Dive Into the Art of Perfumery</h2>
+                <p>A history of perfume innovation and engineering</p>
                 <h5><i>Jared Kim, 11/12/2023<br> </i></h5>
             </div></a>
             <a href="article1.html" class="card-link"><div class="card">
@@ -90,7 +90,7 @@
 <div class="footer">
     <div class="footer-left">
         <h3>MechAlchemy</h3>
-        <p><br>MechAlchemy is where knowledge connects with inspiration. It is a multimedia, student-led project designed to provide insightful guidance in a world where the accessibility of information only contributes to its neglect. We seek to provide every individual with the technical knowledge necessary to distinguish quality manufacturing from capitalist exploitation.</p>
+        <p><br>MechAlchemy is a multimedia, student-led project that seeks to provide insight into the production process of a variety of goods across industries. We believe that behind every item is a story that deserves to be told and that has the potential to inspire.</p>
     </div>
     <div class="footer-center">
         <a href="blog.html" class="footer-link"><h4>Blog</h4></a>
